--- a/package.json
+++ b/package.json
@@ -4,15 +4,27 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "npm i --legacy-peer-deps & node server.js",
+    "start": "node server.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && ng serve -o",
-    "heroku-prebuild": "echo hiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii"
+    "heroku-prebuild": "npm i --legacy-peer-deps"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "13.3.1",
+    "@angular/cdk": "^13.3.1",
+    "@angular/common": "^13.3.1",
+    "@angular/compiler": "^13.3.1",
+    "@angular/core": "^13.0.1",
+    "@angular/elements": "^13.3.1",
+    "@angular/forms": "^13.3.1",
+    "@angular/material": "13.3.1",
+    "@angular/platform-browser": "^13.3.1",
+    "@angular/platform-browser-dynamic": "^13.3.1",
+    "@angular/platform-server": "13.3.1",
+    "@angular/router": "^13.3.1",
     "ajv": "8.11.0",
     "arrive": "2.4.1",
     "bootstrap": "4.6.1",
@@ -36,6 +48,10 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^13.3.1",
+    "@angular/cli": "^13.3.1",
+    "@angular/compiler-cli": "^13.3.1",
+    "@angular/language-service": "13.3.1",
     "@types/bootstrap": "4.5.0",
     "@types/chartist": "0.11.1",
     "@types/google.maps": "3.47.4",
